--- a/02_InventoryGUI/03_DisplayPickupsIcon/Assembly-CSharp.csproj
+++ b/02_InventoryGUI/03_DisplayPickupsIcon/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{9D01455C-AB9F-7055-ADCB-26CCB0FDDA60}</ProjectGuid>
+    <ProjectGuid>{73A92A7B-B999-FA44-D8D5-6C50A02D5220}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\PlayerInventory.cs" />
      <Compile Include="Assets\Scripts\PlayerInventoryDisplay.cs" />
      <Compile Include="Assets\Scripts\PlayerMove.cs" />
